--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/rss": "^4.0.9",
     "@resvg/resvg-js": "^2.6.2",
+    "@tinacms/cli": "^1.6.11",
+    "@tinacms/toolkit": "^1.7.13",
     "astro": "^4.16.12",
     "fuse.js": "^7.0.0",
     "lodash.kebabcase": "^4.1.1",
@@ -24,7 +26,10 @@
     "remark-toc": "^9.0.0",
     "satori": "^0.11.0",
     "tailwindcss": "^3.4.11",
-    "typescript": "^5.5.3"
+    "tina-graphql": "^0.2.0",
+    "tinacms": "^2.4.0",
+    "typescript": "^5.5.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@astrojs/react": "^3.6.2",
