--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "4.7.0",
   "private": false,
   "scripts": {
-    "dev": "astro dev",
+    "dev": "tinacms dev -c \"astro dev\"",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
@@ -38,6 +38,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/github-slugger": "^1.3.0",
     "@types/lodash.kebabcase": "^4.1.9",
+    "@types/node": "^22.9.0",
     "@types/react": "^18.3.6",
     "@typescript-eslint/parser": "^8.5.0",
     "astro-eslint-parser": "^1.0.3",
