--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "4.7.0",
   "private": false,
   "scripts": {
-    "dev": "tinacms dev -c \"astro dev\"",
+    "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
