--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@resvg/resvg-js": "^2.6.2",
     "@tinacms/cli": "^1.6.11",
     "@tinacms/toolkit": "^1.7.13",
+    "@vercel/analytics": "^1.4.1",
     "astro": "^4.16.12",
     "fuse.js": "^7.0.0",
     "lodash.kebabcase": "^4.1.1",
